--- a/finalProject/appsettings.json
+++ b/finalProject/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Host=localhost;Port=5432;Username=postgres;Password=admin;Database=finalproject;TrustServerCertificate=True;"
+    "Connection": "Server=db10225.public.databaseasp.net; Database=db10225; Uid=db10225; Pwd=y?6EY3b#k+7H; SslMode=Preferred"
   },
   "JWT": {
     "Issuer": "http://localhost:7155",
@@ -15,11 +15,11 @@
     "SecretKey": "abdullah_20210560@lsd;fkoasfjop;as0-23480230zlsdmf392024813$%^#@#$#$@##$%#$^$%^#%$$"
   },
   "EmailConfiguration": {
-    "From": "codemazetest@gmail.com",
+    "From": "eduguideai@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "codemazetest@gmail.com",
-    "Password": "admin@2021"
+    "Username": "yabbghagh@gmail.com",
+    "Password": "bzur ymiq zskr jlsy"
+   
   }
-
 }
