--- a/finalProject/appsettings.json
+++ b/finalProject/appsettings.json
@@ -7,19 +7,19 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Server=db10225.public.databaseasp.net; Database=db10225; Uid=db10225; Pwd=y?6EY3b#k+7H; SslMode=Preferred"
+    "Connection": "Server=db10444.public.databaseasp.net; Database=db10444; Uid=db10444; Pwd=Bw7-#5WzPo6%; SslMode=Preferred;"
   },
-  "JWT": {
-    "Issuer": "http://localhost:7155",
-    "Audience": "http://localhost:5000",
-    "SecretKey": "abdullah_20210560@lsd;fkoasfjop;as0-23480230zlsdmf392024813$%^#@#$#$@##$%#$^$%^#%$$"
-  },
-  "EmailConfiguration": {
-    "From": "eduguideai@gmail.com",
-    "SmtpServer": "smtp.gmail.com",
-    "Port": 465,
-    "Username": "yabbghagh@gmail.com",
-    "Password": "bzur ymiq zskr jlsy"
-   
+    "JWT": {
+      "Issuer": "http://localhost:7155",
+      "Audience": "http://localhost:5000",
+      "SecretKey": "abdullah_20210560@lsd;fkoasfjop;as0-23480230zlsdmf392024813$%^#@#$#$@##$%#$^$%^#%$$"
+    },
+    "EmailConfiguration": {
+      "From": "eduguideai@gmail.com",
+      "SmtpServer": "smtp.gmail.com",
+      "Port": 465,
+      "Username": "yabbghagh@gmail.com",
+      "Password": "bzur ymiq zskr jlsy"
+
+    }
   }
-}
